A transparent border stops the UI from jumping around when the company list is selected/deselected.

--- a/receptionist_client/web/css/companyselector.css
+++ b/receptionist_client/web/css/companyselector.css
@@ -1,4 +1,5 @@
 #companyselector {
+  border: 2px solid transparent;
   left: 0%;
   top: 8%;
   /*height: 3%;*/
